fix: align everything in the center

--- a/src/App.css
+++ b/src/App.css
@@ -60,6 +60,7 @@
 }
 
 .content {
+  text-align: center;
   position: absolute;
   top: 40%;
 }
